# MotionPlanning

./: Makefile  plugin.cpp  r_leg.txt  testPI.py
plugins/planning/: CMakeLists.txt  testplugin.py
plugins/planning/src/: l_arm.txt  l_leg.txt  smallgridsize  testmain.cpp
plugins/testplugin/: CMakeLists.txt  testplugin.cpp  testplugin.py
sample_escher/: l_arm_samples  l_leg_samples  r_arm_samples  r_leg_samples  testEscher.py
sample_escher/escher_model/: escher_cpp.urdf
scenes/: hole.env.xml
